--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://dpg-cmddeemd3nmc73dj5s00-a.oregon-postgres.render.com/crazymeet
+spring.datasource.username=bibek
+spring.datasource.password=F1gSn5Y942zdYoRCCZsZ3y9DMKY3o6z9
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+#server.port=8080
